[package]
name = "aoc20"
version = "0.1.0"
authors = ["alexdevteam <alexpro820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "puzzle1"
path = "src/puzzle1.rs"

[[bin]]
name = "puzzle2"
path = "src/puzzle2.rs"

[[bin]]
name = "puzzle3"
path = "src/puzzle3.rs"

[[bin]]
name = "puzzle4"
path = "src/puzzle4.rs"

[dependencies]
regex = "1.4.2"